# att_viz

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  checklist.md  paper.bib  paper.md  post_processing.py  pyproject.toml
.github/workflows/: static.yml  update_coverage.yaml  update_documentation.yaml
att_viz/: attention_aggregation_method.py  attention_matrix.py  attention_viz.js  renderer.py  self_attention_model.py  utils.py
docs/: att_viz.rst  conf.py
docs/_build/: .buildinfo  att_viz.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: att_viz.doctree  environment.pickle  examples.doctree  index.doctree  modules.doctree  test.doctree
docs/_build/_sources/: index.rst.txt  modules.rst.txt
examples/: example.ipynb
reports/coverage/: coverage.xml
reports/coverage/html_report/: class_index.html  function_index.html  index.html  status.json  z_5b5bbd107071b550___init___py.html  z_5b5bbd107071b550_attention_aggregation_method_py.html  z_5b5bbd107071b550_attention_matrix_py.html  z_5b5bbd107071b550_renderer_py.html  z_5b5bbd107071b550_self_attention_model_py.html  z_5b5bbd107071b550_utils_py.html
test/: test_attention_matrix.pickle  test_attention_matrix.py  test_completion_tokens.pickle  test_render_classes.py  test_result.html  test_save_process_completions.py  test_self_attention_model.py
